[package]
name = "tree-sitter-bpf-c"
description = "tree-sitter grammar for BPF C"
version = "0.2.0"
authors = ["Daniel Müller <deso@posteo.net>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bpf", "c"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/d-e-s-o/tree-sitter-bpf-c"
documentation = "https://docs.rs/tree-sitter-bpf-c"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
